[PE] Relax TransformationMatrix::IsInvertible

Previously it treated transforms with abs(determinant) less than 1e-8 as
non-invertible. This was too strict that transforms like Scale(9.9e-5)
were treated as non-invertible.

Now just check if determinant is zero, which is consistent with
AffineTransform and SkMatrix[44].

The code was added here:
https://chromium.googlesource.com/chromium/src/+/30ccd951242146e88924d674d70b7e660fba625a [formerly 041f0d1e8d01d8dc0cd2f4fe2579e1f09a9ae27a]
in an initial commit of 3D transforms.

Bug: 849382
Change-Id: I01e395f373493f61fcf85851b694be9aed7b41c5
Reviewed-on: https://chromium-review.googlesource.com/1087362
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564680}
Former-commit-id: b0708fdad511e82684a474b12fd932026ea33a12